[metadata]
name = python-concentriq
url = https://github.com/bayer-group/python-concentriq
download_url = https://github.com/bayer-group/python-concentriq
license = Not open source
license_file = LICENSE
description = Python package for interacting with a Proscia Concentriq instance
long_description = file: README.md
long_description_content_type = text/markdown
author = Andreas Poehlmann
author_email = andreas.poehlmann@bayer.com
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS

[options]
packages = find:
python_requires = >=3.7
install_requires =
    importlib_resources; python_version < '3.9'
    orjson
    platformdirs
    pydantic
    requests
    rich
    shapely
    typer
    typing_extensions; python_version < '3.8'

[options.packages.find]
exclude =
    *.tests

[options.package_data]
python_concentriq =
    py.typed

[options.extras_require]
dev =
    pytest>=6
    pytest-cov
    mypy

docs =
    sphinx
    sphinxemoji
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    concentriq = concentriq.__main__:app
